--- a/style.css
+++ b/style.css
@@ -16,6 +16,9 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: #333;
+  position: -webkit-sticky; /* Safari */
+  position: sticky;
+  top: 0;
 }
 
 li {
@@ -34,3 +37,8 @@ li a {
 li a:hover {
   background-color: #111;
 }
+
+.active {
+  background-color: #4CAF50;
+}
+
