--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
 
 /* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: #4CAF50;
 }
 
 /* Dropdown content (hidden by default) */
